--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   </style>
 </head>
 <body>
+  <img src="images/image-product-mobile.jpg" class="img_mobile" alt="Chanel Gabrielle Essence Perfume"> </img>
 
-  Preview
 
-  Gabrielle Essence Eau De Parfum
+  <h1>Preview</h1>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <h2>Gabrielle Essence Eau De Parfum</h2>
 
-  $149.99
-  $169.99
+  <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+  Perfumer-Creator for the House of CHANEL.</p>
 
-  Add to Cart
+  <h3>$149.99</h3>
+  <h4>$169.99</h4>
+
+  <btn>Add to Cart</btn>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
