--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -15,6 +16,7 @@
   </style>
 </head>
 <body>
+  <div class="container"> 
   <img src="images/image-product-mobile.jpg" class="img_mobile" alt="Chanel Gabrielle Essence Perfume"> </img>
 
 
@@ -29,7 +31,8 @@
   <h4>$169.99</h4>
 
   <btn>Add to Cart</btn>
-  
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
