--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 
   <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
+ 
+  <div class="price">
+    <h3>$149.99</h3>
+    <h4>$169.99</h4>
+  </div>
 
-  <h3>$149.99</h3>
-  <h4>$169.99</h4>
-
-  <btn>Add to Cart</btn>
+  <button><img src="images/icon-cart.svg">Add to Cart</img></button>
 </div>
 
   <div class="attribution">
