--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </style>
 </head>
 <body>
+  <main>
   <div class="container"> 
       <div class="img-child">
         <img src="images/image-product-mobile.jpg" class="img_mobile" alt="Chanel Gabrielle Essence Perfume"> </img>  
@@ -42,10 +43,13 @@
       </button>
     </div>
   </div>
+</main>
 
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Shay Shohret</a>.
   </div>
+</footer>
 </body>
 </html>
